--- a/app/views/form1/new.html.erb
+++ b/app/views/form1/new.html.erb
@@ -1,30 +1,26 @@
 <% provide(:title, 'Sign up') %>
 <h1 style="font-family: cursive;">Điền Thông tin</h1>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@form1) do |f| %>
       <%= f.label :name, "Họ và Tên" %>
       <%= f.text_field :name %>
-
       <%= f.label :time_work, "Thời gian" %>
       <%= f.text_field :time_work %>
-
       <%= f.label :job, "Công việc" %>
       <%= f.text_field :job %>
-
       <%= f.label :date, "Ngày" %>
       <%= f.date_field :date %>
-
       <%= f.label :customer, "Khách hàng" %>
       <%= f.text_field :customer %>
-
       <%= f.label :income, "Thu nhập" %>
       <%= f.number_field :income %>
-
       <%= f.label "Mô tả công việc" %>
       <%= f.text_field :work_des %>
-
+      <span class="image">
+        <%= f.label :image, "Hình ảnh xác nhận" %>
+        <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+      </span>
       <%= f.submit "Xác nhận",{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
     <% end %>
   </div>
