--- a/app/views/form2/new.html.erb
+++ b/app/views/form2/new.html.erb
@@ -1,33 +1,28 @@
 <% provide(:title, 'Form') %>
 <h1 style="font-family: cursive;">Điền Thông tin</h1>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@form2) do |f| %>
       <%= f.label :company_name, "Tên công ty" %>
       <%= f.text_field :company_name %>
-
       <%= f.label :tax_code, "Mã tax" %>
       <%= f.text_field :tax_code %>
-
       <%= f.label :address, "Địa chỉ" %>
       <%= f.text_field :address %>
-
       <%= f.label :name, "Họ và Tên" %>
       <%= f.text_field :name %>
-
       <%= f.label :position, "Vị trí/Công việc" %>
       <%= f.text_field :position %>
-
       <%= f.label :date, "Ngày" %>
       <%= f.date_field :date %>
-
       <%= f.label "Mô tả công việc" %>
       <%= f.text_field :work_des %>
-
       <%= f.label :income, "Thu nhập" %>
       <%= f.number_field :income %>
-
+      <span class="image">
+        <%= f.label :image, "Hình ảnh xác nhận" %>
+        <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+      </span>
       <%= f.submit "Xác nhận", {:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
     <% end %>
   </div>
