--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,9 @@
         Tên: <%= @user.name %>
         <br>
         Email: <%= @user.email %>
+        <span class="content">
+          <%= image_tag @user.display_image if @user.image.attached? %>
+        </span>
       </h1>
     </section>
   </aside>
@@ -30,166 +33,166 @@
   <%= link_to "Xem thông tin", user_form2_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}  %>
 </div>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-<div class="carousel-inner">
-<div class="carousel-item active">
-<h2 style="color: blue; font-weight:bold;">Người làm tự do</h2>
-<table id="table1" class="table table-striped table-bordered" style="width:100%">
-  <thead>
-    <tr>
-      <th>STT</th>
-      <th>Thời gian</th>
-      <th>Công việc</th>
-      <th>Ngày</th>
-      <th>Khách hàng</th>
-      <th>Thu nhập</th>
-      <th>Mô tả công việc</th>
-    </tr>
-  </thead>
-  <%count=1%>
-  <tbody>
-    <% @user.form1s.each do |form1| %>
-      <tr>
-        <td><%= count%></td>
-        <td><%= form1.time_work %></td>
-        <td><%= form1.job %></td>
-        <td><%= form1.date %></td>
-        <td><%= form1.customer %></td>
-        <td><%= form1.income %></td>
-        <td><%= form1.work_des%></td>
-        <%count+=1%>
-      </tr>
-    <% end %>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>Tổng thu nhập:</th>
-      <th colspan="6" style="text-align:center"></th>
-    </tr>
-  </tfoot>
-</table>
-<script language="javascript" type="text/javascript">
-  $(document).ready(function() {
-      $('#table1').DataTable({
-        "footerCallback": function ( row, data, start, end, table ) {
-            var api = this.api(), data;
-  
-            // Remove the formatting to get integer data for summation
-            var intVal = function ( i ) {
-                return typeof i === 'string' ?
-                    i.replace(/[\$,]/g, '')*1 :
-                    typeof i === 'number' ?
-                        i : 0;
-            };
-  
-            // Total over all pages
-            total = api
-                .column( 5 )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Total over this page
-            pageTotal = api
-                .column( 5, { page: 'current'} )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Update footer
-            $( api.column( 5 ).footer() ).html(
-                pageTotal +' (Tổng: '+ total +')'
-            );
-        }
-      });
-  } );
-</script>
-</div>
-<div class="carousel-item">
-<h2 style="color: blue; font-weight:bold;">Nhân viên công ty</h2>
-<table id="table2" class="table table-striped table-bordered" style="width:100%">
-  <thead>
-    <tr>
-      <th>STT</th>
-      <th>Tên công ty</th>
-      <th>Mã Tax</th>
-      <th>Địa chỉ</th>
-      <th>Vị trí công việc</th>
-      <th>Ngày</th>
-      <th>Thu nhập</th>
-      <th>Mô tả công việc</th>
-    </tr>
-  </thead>
-  <%count=1%>
-  <tbody>
-    <% @user.form2s.each do |form2| %>
-      <tr>
-        <td><%= count%></td>
-        <td><%= form2.company_name %></td>
-        <td><%= form2.tax_code %></td>
-        <td><%= form2.address %></td>
-        <td><%= form2.position %></td>
-        <td><%= form2.date %></td>
-        <td><%= form2.income%></td>
-        <td><%= form2.work_des%></td>
-        <%count+=1%>
-      </tr>
-    <% end %>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>Tổng thu nhập:</th>
-      <th colspan="7" style="text-align:center"></th>
-    </tr>
-  </tfoot>
-</table>
-<script language="javascript" type="text/javascript">
-  $(document).ready(function() {
-      $('#table2').DataTable({
-        "footerCallback": function ( row, data, start, end, table ) {
-            var api = this.api(), data;
-  
-            // Remove the formatting to get integer data for summation
-            var intVal = function ( i ) {
-                return typeof i === 'string' ?
-                    i.replace(/[\$,]/g, '')*1 :
-                    typeof i === 'number' ?
-                        i : 0;
-            };
-  
-            // Total over all pages
-            total = api
-                .column( 6 )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Total over this page
-            pageTotal = api
-                .column( 6, { page: 'current'} )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Update footer
-            $( api.column( 6 ).footer() ).html(
-                pageTotal +' (Tổng: '+ total +')'
-            );
-        }
-      });
-  } );
-</script>
-</div>
-<a class="carousel-control-prev" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span style="filter: invert(100%);" class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Trước</span>
-</a>
-<a class="carousel-control-next" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="next">
-    <span style="filter: invert(100%);" class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Kế tiếp</span>
-</a>
-</div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <h2 style="color: blue; font-weight:bold;">Người làm tự do</h2>
+      <table id="table1" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+          <tr>
+            <th>STT</th>
+            <th>Thời gian</th>
+            <th>Công việc</th>
+            <th>Ngày</th>
+            <th>Khách hàng</th>
+            <th>Thu nhập</th>
+            <th>Mô tả công việc</th>
+          </tr>
+        </thead>
+        <%count=1%>
+        <tbody>
+          <% @user.form1s.each do |form1| %>
+            <tr>
+              <td><%= count%></td>
+              <td><%= form1.time_work %></td>
+              <td><%= form1.job %></td>
+              <td><%= form1.date %></td>
+              <td><%= form1.customer %></td>
+              <td><%= form1.income %></td>
+              <td><%= form1.work_des%></td>
+              <%count+=1%>
+            </tr>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th>Tổng thu nhập:</th>
+            <th colspan="6" style="text-align:center"></th>
+          </tr>
+        </tfoot>
+      </table>
+      <script language="javascript" type="text/javascript">
+        $(document).ready(function() {
+            $('#table1').DataTable({
+              "footerCallback": function ( row, data, start, end, table ) {
+                  var api = this.api(), data;
+        
+                  // Remove the formatting to get integer data for summation
+                  var intVal = function ( i ) {
+                      return typeof i === 'string' ?
+                          i.replace(/[\$,]/g, '')*1 :
+                          typeof i === 'number' ?
+                              i : 0;
+                  };
+        
+                  // Total over all pages
+                  total = api
+                      .column( 5 )
+                      .data()
+                      .reduce( function (a, b) {
+                          return intVal(a) + intVal(b);
+                      }, 0 );
+        
+                  // Total over this page
+                  pageTotal = api
+                      .column( 5, { page: 'current'} )
+                      .data()
+                      .reduce( function (a, b) {
+                          return intVal(a) + intVal(b);
+                      }, 0 );
+        
+                  // Update footer
+                  $( api.column( 5 ).footer() ).html(
+                      pageTotal +' (Tổng: '+ total +')'
+                  );
+              }
+            });
+        } );
+      </script>
+    </div>
+    <div class="carousel-item">
+      <h2 style="color: blue; font-weight:bold;">Nhân viên công ty</h2>
+      <table id="table2" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+          <tr>
+            <th>STT</th>
+            <th>Tên công ty</th>
+            <th>Mã Tax</th>
+            <th>Địa chỉ</th>
+            <th>Vị trí công việc</th>
+            <th>Ngày</th>
+            <th>Thu nhập</th>
+            <th>Mô tả công việc</th>
+          </tr>
+        </thead>
+        <%count=1%>
+        <tbody>
+          <% @user.form2s.each do |form2| %>
+            <tr>
+              <td><%= count%></td>
+              <td><%= form2.company_name %></td>
+              <td><%= form2.tax_code %></td>
+              <td><%= form2.address %></td>
+              <td><%= form2.position %></td>
+              <td><%= form2.date %></td>
+              <td><%= form2.income%></td>
+              <td><%= form2.work_des%></td>
+              <%count+=1%>
+            </tr>
+          <% end %>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th>Tổng thu nhập:</th>
+            <th colspan="7" style="text-align:center"></th>
+          </tr>
+        </tfoot>
+      </table>
+      <script language="javascript" type="text/javascript">
+        $(document).ready(function() {
+            $('#table2').DataTable({
+              "footerCallback": function ( row, data, start, end, table ) {
+                  var api = this.api(), data;
+        
+                  // Remove the formatting to get integer data for summation
+                  var intVal = function ( i ) {
+                      return typeof i === 'string' ?
+                          i.replace(/[\$,]/g, '')*1 :
+                          typeof i === 'number' ?
+                              i : 0;
+                  };
+        
+                  // Total over all pages
+                  total = api
+                      .column( 6 )
+                      .data()
+                      .reduce( function (a, b) {
+                          return intVal(a) + intVal(b);
+                      }, 0 );
+        
+                  // Total over this page
+                  pageTotal = api
+                      .column( 6, { page: 'current'} )
+                      .data()
+                      .reduce( function (a, b) {
+                          return intVal(a) + intVal(b);
+                      }, 0 );
+        
+                  // Update footer
+                  $( api.column( 6 ).footer() ).html(
+                      pageTotal +' (Tổng: '+ total +')'
+                  );
+              }
+            });
+        } );
+      </script>
+    </div>
+    <a class="carousel-control-prev" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span style="filter: invert(100%);" class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Trước</span>
+    </a>
+    <a class="carousel-control-next" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="next">
+      <span style="filter: invert(100%);" class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Kế tiếp</span>
+    </a>
+  </div>
 </div>
