--- a/app/views/form1/edit.html.erb
+++ b/app/views/form1/edit.html.erb
@@ -1,16 +1,10 @@
-<h1>Cập nhật Bảng Mẫu</h1>
+<h1>Cập nhật Bảng Mẫu Làm Tự Do</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @form1, url: {action: "update"} do |f| %>
       <%#= form_with method: :post, url: form1s_path, local: true do |f| %>
-        <%= f.label :name, "Họ và Tên" %>
-        <%= f.text_field :name, value: @form1.name%>
-        <%= f.label :time, "Thời gian" %>
-        <%= f.text_field :time_work, value: @form1.time_work %>
-        <%= f.label :job, "Công Việc" %>
-        <%= f.text_field :job, value: @form1.job %>
         <%= f.label :date, "Ngày" %>
-        <%= f.date_field :date, value: @form1.date %>
+        <%= f.date_field :date, value: @form1.date, class:"form-control", type:"datetime-local"%>
         <%= f.label :customer, "Khách hàng" %>
         <%= f.text_field :customer, value: @form1.customer %>
         <%= f.label :income, "Thu nhập" %>
