--- a/app/views/form1/new.html.erb
+++ b/app/views/form1/new.html.erb
@@ -1,16 +1,10 @@
 <% provide(:title, 'Sign up') %>
-<h1 style="font-family: cursive;">Điền Thông tin</h1>
+<h1 style="font-family: cursive;">Điền Thông Tin Làm Tự Do</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@form1) do |f| %>
-      <%= f.label :name, "Họ và Tên" %>
-      <%= f.text_field :name %>
-      <%= f.label :time_work, "Thời gian" %>
-      <%= f.text_field :time_work %>
-      <%= f.label :job, "Công việc" %>
-      <%= f.text_field :job %>
       <%= f.label :date, "Ngày" %>
-      <%= f.date_field :date %>
+      <%= f.date_field :date, class:"form-control", type:"datetime-local", value:Time.now %>
       <%= f.label :customer, "Khách hàng" %>
       <%= f.text_field :customer %>
       <%= f.label :income, "Thu nhập" %>
