--- a/app/views/form2/new.html.erb
+++ b/app/views/form2/new.html.erb
@@ -1,20 +1,10 @@
 <% provide(:title, 'Form') %>
-<h1 style="font-family: cursive;">Điền Thông tin</h1>
+<h1 style="font-family: cursive;">Điền Thông Tin Làm cho Công Ty</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@form2) do |f| %>
-      <%= f.label :company_name, "Tên công ty" %>
-      <%= f.text_field :company_name %>
-      <%= f.label :tax_code, "Mã tax" %>
-      <%= f.text_field :tax_code %>
-      <%= f.label :address, "Địa chỉ" %>
-      <%= f.text_field :address %>
-      <%= f.label :name, "Họ và Tên" %>
-      <%= f.text_field :name %>
-      <%= f.label :position, "Vị trí/Công việc" %>
-      <%= f.text_field :position %>
       <%= f.label :date, "Ngày" %>
-      <%= f.date_field :date %>
+      <%= f.date_field :date, class:"form-control", type:"datetime-local", value:Time.now%>
       <%= f.label "Mô tả công việc" %>
       <%= f.text_field :work_des %>
       <%= f.label :income, "Thu nhập" %>
