upgrade ui and add fixture

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <a href="https://onlinesalesweb.herokuapp.com/" style="color: #9999ff; font-family: cursive;">Income Management Website</a>
+    <a href="https://onlinesalesweb.herokuapp.com/" style="color: #9999ff; font-family: arial;">Nghị lực sống</a>
     by <a href="https://cohota.com/" style="color: #9999ff; font-weight: bold;">Cohota</a>
   </small>
   <nav>
     <ul>
-      <li style="font-family: cursive;"><%= link_to "About",   '#' %></li>
-      <li style="font-family: cursive;"><%= link_to "Contact", '#' %></li>
-      <li><a href="https://shopee.vn/" style="color: #9999ff; font-weight: bold;">News</a></li>
+      <li style="font-family: monospace;"><%= link_to "Về chúng tôi",   '#' %></li>
+      <li style="font-family: monospace;"><%= link_to "Liên hệ", '#' %></li>
+      <li><a href="https://shopee.vn/" style="color: #9999ff; font-weight: bold;">Tin tức</a></li>
     </ul>
   </nav>
 </footer>
