--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,20 +1,26 @@
 <% provide(:title, 'Reset password') %>
-<h1>Reset password</h1>
-
-<div class="row">
+<div class="home-login">
+  <%= link_to image_tag("home1.png",class: "img-responsive") %>
+</div>
+<div class="container-login">
+<div class="row justify-content-center">
+  <div class="container-row-login">
   <div class="col-md-6 col-md-offset-3">
+    <h1 style="font-family: cursive;">Tạo lại mật khẩu</h1>
     <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
       <%= render 'shared/error_messages' %>
 
       <%= hidden_field_tag :email, @user.email %>
 
-      <%= f.label :password %>
+      <%= f.label "Mật khẩu" %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label "Xác nhận mật khẩu" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Update password", class: "btn btn-primary" %>
+      <%= f.submit "Cập nhật mật khẩu", class: "btn btn-primary" %>
     <% end %>
   </div>
+  </div>
+</div>
 </div>
