--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,24 @@
 <% provide(:title, 'All users') %>
 <div class="jumbotron jumbotron-fluid">
 <div class="container">
-<h1 style="color: #0066cc; font-family: cursive">All Users</h1>
+<h1 style="color: #0066cc; font-family: arial">Danh sách người dùng</h1>
 <ul class="users">
-  <% @user.each do |user| %>
+  <% @users.each do |user| %>
     <li>
       <%= gravatar_for user, size: 50 %>
       <%if current_user.admin?%>
         <%= link_to user.name, user , {:style=>'text-decoration: none;', :class => "css_class"} %>
         <% if current_user.admin? && !current_user?(user) %>
-          | <%= link_to "delete", user, {:style=>'font-style: italic; color: red;', :class => "css_class", method: :delete, data: { confirm: "You sure?" }}%>
+          | <%= link_to "xóa", user, {:style=>'font-style: italic; color: red;', :class => "css_class", method: :delete, data: { confirm: "You sure?" }}%>
         <% end %><br>
       <%else%>
         <p><%= user.name %></p>
       <%end%>
       <%= user.email%><br/>
-      <%= user.admin == true ? "Admin" : "Member"%><br/>
+      <%= user.admin == true ? "Quản trị viên" : "Thành viên"%><br/>
     </li>
   <% end %>
 </ul>
+<%= will_paginate %>
 </div>
 </div>
