--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,30 @@
 <% provide(:title, 'Sign up') %>
-<h1 style="font-family: cursive;">Sign up</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div class="home-signup">
+  <%= link_to image_tag("home1.png",class: "img-responsive") %>
+</div>
+<div class="container-signup">
+<div class="row justify-content-center">
+  <div class="container-row-signup">
+  <div class="col-md-10 col-md-offset-2">
+    <h1 style="font-family: monospace;">Đăng kí</h1>
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
 
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.label "Tên" %>
+      <%= f.text_field :name, class: 'form-control', placeholder:'Nhập tên của bạn' %>
 
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control', placeholder:'Nhập email của bạn' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.label "Mật khẩu"%>
+      <%= f.password_field :password, class: 'form-control', placeholder:'Nhập mật khẩu của bạn' %>
 
-      <%= f.label :password_confirmation, "Password Comfirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= f.label "Xác nhận mật khẩu" %>
+      <%= f.password_field :password_confirmation, class: 'form-control', placeholder:'Nhập lại mật khẩu phía trên' %>
 
-      <%= f.submit "Create Account", {:style=>'font-family:cursive', :class => "css_class",class: "btn btn-warning"} %>
+      <%= f.submit "Tạo tài khoản", {:style=>'font-family:arial', :class => "css_class",class: "btn btn-warning"} %>
     <% end %>
   </div>
+  </div>
+</div>
 </div>
