--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, @user.name) %>
+<div class="home-user">
+  <%= link_to image_tag("user.png",class: "img-responsive") %>
+</div>
+<div class="container-user">
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-10">
     <section class="user_info">
       <h1>
         <%= gravatar_for @user %>
-        Welcome!
+        Xin chào!
         <br>
         <%= @user.name %>
         <br>
@@ -14,183 +18,32 @@
   </aside>
 </div>
 <div class="user_center">
-  <h3>
-    If you work as  
-    <a style="font-style: italic;" href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Freelancer</a>
-    (click to Sample form).
-  </h3>
-  <%= link_to "Submit information", new_user_form1_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}   %>
-  <%= link_to "View information", user_form1_url(current_user), {:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}%>
-  <h3>
-    If you work as 
-    <a style="font-style: italic;" href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Employee for Company</a>
-    (click to Sample form).
-  </h3>
-  <%= link_to "Submit information", new_user_form2_url(current_user),{:style=>'color:white; font-family:cursive; ', :class => "css_class",class: "btn btn-lg btn-primary"}   %>
-  <%= link_to "View information", user_form2_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}  %>
-</div>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-<div class="carousel-inner">
-<div class="carousel-item active">
-<h2 style="color: blue; font-weight:bold;">Freelancer</h2>
-<table id="table1" class="table table-striped table-bordered" style="width:100%">
-  <thead>
-    <tr>
-      <th>STT</th>
-      <th>Time</th>
-      <th>Job</th>
-      <th>Date</th>
-      <th>Customer</th>
-      <th>Income</th>
-      <th>Work description</th>
-    </tr>
-  </thead>
-  <%count=1%>
-  <tbody>
-    <% @user.form1s.each do |form1| %>
-      <tr>
-        <td><%= count%></td>
-        <td><%= form1.time_work %></td>
-        <td><%= form1.job %></td>
-        <td><%= form1.date %></td>
-        <td><%= form1.customer %></td>
-        <td><%= form1.income %></td>
-        <td><%= form1.work_des%></td>
-        <%count+=1%>
-      </tr>
-    <% end %>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>Total:</th>
-      <th colspan="6" style="text-align:center"></th>
-    </tr>
-  </tfoot>
-</table>
-<script language="javascript" type="text/javascript">
-  $(document).ready(function() {
-      $('#table1').DataTable({
-        "footerCallback": function ( row, data, start, end, table ) {
-            var api = this.api(), data;
-  
-            // Remove the formatting to get integer data for summation
-            var intVal = function ( i ) {
-                return typeof i === 'string' ?
-                    i.replace(/[\$,]/g, '')*1 :
-                    typeof i === 'number' ?
-                        i : 0;
-            };
-  
-            // Total over all pages
-            total = api
-                .column( 5 )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Total over this page
-            pageTotal = api
-                .column( 5, { page: 'current'} )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Update footer
-            $( api.column( 5 ).footer() ).html(
-                pageTotal +' (total: '+ total +')'
-            );
-        }
-      });
-  } );
-</script>
-</div>
-<div class="carousel-item">
-<h2 style="color: blue; font-weight:bold;">Work for Company</h2>
-<table id="table2" class="table table-striped table-bordered" style="width:100%">
-  <thead>
-    <tr>
-      <th>STT</th>
-      <th>Company Name</th>
-      <th>Tax code</th>
-      <th>Address</th>
-      <th>Position</th>
-      <th>Date</th>
-      <th>Income</th>
-      <th>Work description</th>
-    </tr>
-  </thead>
-  <%count=1%>
-  <tbody>
-    <% @user.form2s.each do |form2| %>
-      <tr>
-        <td><%= count%></td>
-        <td><%= form2.company_name %></td>
-        <td><%= form2.tax_code %></td>
-        <td><%= form2.address %></td>
-        <td><%= form2.position %></td>
-        <td><%= form2.date %></td>
-        <td><%= form2.income%></td>
-        <td><%= form2.work_des%></td>
-        <%count+=1%>
-      </tr>
-    <% end %>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>Total:</th>
-      <th colspan="7" style="text-align:center"></th>
-    </tr>
-  </tfoot>
-</table>
-<script language="javascript" type="text/javascript">
-  $(document).ready(function() {
-      $('#table2').DataTable({
-        "footerCallback": function ( row, data, start, end, table ) {
-            var api = this.api(), data;
-  
-            // Remove the formatting to get integer data for summation
-            var intVal = function ( i ) {
-                return typeof i === 'string' ?
-                    i.replace(/[\$,]/g, '')*1 :
-                    typeof i === 'number' ?
-                        i : 0;
-            };
-  
-            // Total over all pages
-            total = api
-                .column( 6 )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Total over this page
-            pageTotal = api
-                .column( 6, { page: 'current'} )
-                .data()
-                .reduce( function (a, b) {
-                    return intVal(a) + intVal(b);
-                }, 0 );
-  
-            // Update footer
-            $( api.column( 6 ).footer() ).html(
-                pageTotal +' (total: '+ total +')'
-            );
-        }
-      });
-  } );
-</script>
-</div>
-<a class="carousel-control-prev" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span style="filter: invert(100%);" class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" style="width: 2%;" href="#carouselExampleControls" role="button" data-slide="next">
-    <span style="filter: invert(100%);" class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-</a>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="user-choosen">
+    <button style="font-family: arial;"class="btn btn-success" aria-pressed="true" id="btn1" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> Làm tự do</button>
+    <button style="font-family: arial;"class="btn btn-success" aria-pressed="true" id="btn2" data-target="#carouselExampleIndicators" data-slide-to="1"> Làm tại công ty</button>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <h3>
+        Nếu bạn làm việc theo kiểu  
+        <a style="font-style: italic;" href="https://drive.google.com/file/d/1ucGjhLwVx-uzawQq8bTESnhm36o594Po/view">Tự do</a>
+        (xem form mẫu có sẵn).
+      </h3>
+      <%= link_to "Nhập thông tin", new_user_form1_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}   %>
+      <%= link_to "Xem thông tin", user_form1_url(current_user), {:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}%>
+    </div>
+    <div class="carousel-item">
+      <h3>
+        Nếu bạn làm việc theo kiểu 
+        <a style="font-style: italic;" href="https://drive.google.com/file/d/1CoOf9gD-YRsq83h7UlNIyRyct5RFmAdM/view">Nhân viên cho công ty</a>
+        (xem form mẫu có sẵn).
+      </h3>
+      <%= link_to "Nhập thông tin", new_user_form2_url(current_user),{:style=>'color:white; font-family:cursive; ', :class => "css_class",class: "btn btn-lg btn-primary"}   %>
+      <%= link_to "Xem thông tin", user_form2_url(current_user),{:style=>'color:white; font-family:cursive;', :class => "css_class",class: "btn btn-lg btn-primary"}  %>
+    </div>
+  </div>
 </div>
 </div>
-// This is a comment
+</div>
+
