--- a/app/views/form1/new.html.erb
+++ b/app/views/form1/new.html.erb
@@ -1,31 +1,21 @@
 <% provide(:title, 'Sign up') %>
-<h1 style="font-family: cursive;">Input information</h1>
-
+<h1 style="font-family: cursive;">Điền Thông Tin Làm Tự Do</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@form1) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :time_work %>
-      <%= f.text_field :time_work %>
-
-      <%= f.label :job %>
-      <%= f.text_field :job %>
-
-      <%= f.label :date %>
-      <%= f.date_field :date %>
-
-      <%= f.label :customer %>
-      <%= f.text_field :customer %>
-
-      <%= f.label :income %>
-      <%= f.number_field :income %>
-
-      <%= f.label "Work description" %>
-      <%= f.text_field :work_des %>
-
-      <%= f.submit "Submit",{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
+      <%= f.label :date, "Ngày"%>
+      <%= f.date_field :date, class:"form-control", type:"datetime-local", value:Time.now %>
+      <%= f.label :customer, "Khách hàng"%>
+      <%= f.text_field :customer, class:"form-control form-control-lg", placeholder:"nhập vào tên khách hàng" %>
+      <%= f.label :income, "Thu nhập" %>
+      <%= f.number_field :income, class:"form-control form-control-lg", placeholder:"nhập vào số tiền của công việc cần điền"%>
+      <%= f.label "Mô tả công việc" %>
+      <%= f.text_field :work_des, class:"form-control form-control-lg", placeholder:"nhập vào công việc hàng ngày"%>
+      <span class="image">
+        <%= f.label :image, "Hình ảnh xác nhận" %>
+        <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+      </span>
+      <%= f.submit "Xác nhận",{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
     <% end %>
   </div>
 </div>
