--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -7,13 +7,8 @@
       <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
     </center>
     <p class="text-justify">Tên/Name: <%= current_user.name%></p>
-    <% if current_user.form1s.any? %>
-      <p class="text-justify">Thời gian/Time: <%= current_user.form1s.last.time_work%></p>
-      <p class="text-justify">Công Việc/Job: <%= current_user.form1s.last.job%></p>
-    <%else%>
-      <p class="text-justify">Thời gian/Time: <%= "Blank"%></p>
-      <p class="text-justify">Công Việc/Job: <%= "Blank"%></p>
-    <%end%>
+    <p class="text-justify">Thời gian/Time: <%= current_user.time_work%></p>
+    <p class="text-justify">Công Việc/Job: <%= current_user.job%></p>
     <table id="table1" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
@@ -22,39 +17,37 @@
           <th>Khách hàng/Customer</th>
           <th>Số tiền/Income</th>
           <th>Nội dung/Description</th>
-          <th>Xác nhận/Signature</th>
+          <th>Chữ ký/Signature</th>
         </tr>
       </thead>
       <%count=1%>
       <tbody>
-        <% @form1.each do |form1| %>
+        <% current_user.form1s.each do |form1| %>
           <tr>
             <td><%= count%></td>
-            <td><%= form1.date %></td>
+            <td><%= form1.date%></td>
             <td><%= form1.customer %></td>
-            <td><%= form1.income %></td>
+            <td><%= number_to_currency(form1.income, :unit => "$", :separator => ".", :delimiter => ",") %></td>
             <td><%= form1.work_des %></td>
-            <td><%= "" %></td>
+            <td>
+              <span class="content">
+                <%= image_tag form1.display_image if form1.image.attached? %>
+              </span>
+            </td>
+            <td><%= link_to "Chỉnh sửa", "/users/#{current_user.id}/form1/#{form1.id}/edit" %></td>
+            <td> <%= link_to 'Xóa', "/users/#{current_user.id}/form1/#{form1.id}/",
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %></td>
             <%count+=1%>
           </tr>
         <% end %>
       </tbody>
-      <%# <tfoot>
-        <tr>
-          <th>STT/No</th>
-          <th>Ngày/Date</th>
-          <th>Khách hàng/Customer</th>
-          <th>Số tiền/Income</th>
-          <th>Nội dung/Description</th>
-          <th>Xác nhận/Signature</th>
-        </tr>
-      </tfoot> %>
     </table>
   </div>
 </div>
 <br>
 <br>
-<%= link_to 'Back', current_user ,{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-lg btn-primary"}%>
+<%= link_to 'Trở về', current_user ,{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-lg btn-primary"}%>
 <button style="font-family: cursive;" type="button" class="btn btn-lg btn-primary btn-lg" onclick="export2Word(window.docx)">Export to Word</button>
 <%= link_to 'Export to Excel', user_form1_index_url(format: :csv) ,{:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-lg btn-primary"}%>
 <button style="font-family: cursive;" type="button" class="btn btn-lg btn-primary btn-lg" id="downloadPDF">Export to PDF</button>
@@ -78,26 +71,26 @@
   
   function export2Word( element ) {
   
-     var html, link, blob, url, css;
+    var html, link, blob, url, css;
   
-     css = (
-       '<style>' +
-       '@page WordSection1{size: 841.95pt 595.35pt;mso-page-orientation: landscape;}' +
-       'div.WordSection1 {page: WordSection1;}' +
-       '</style>'
-     );
+    css = (
+      '<style>' +
+      '@page WordSection1{size: 841.95pt 595.35pt;mso-page-orientation: landscape;}' +
+      'div.WordSection1 {page: WordSection1;}' +
+      '</style>'
+    );
   
-     html = element.innerHTML;
-     blob = new Blob(['\ufeff', css + html], {
-       type: 'application/msword'
-     });
-     url = URL.createObjectURL(blob);
-     link = document.createElement('A');
-     link.href = url;
+    html = element.innerHTML;
+    blob = new Blob(['\ufeff', css + html], {
+      type: 'application/msword'
+    });
+    url = URL.createObjectURL(blob);
+    link = document.createElement('A');
+    link.href = url;
      link.download = 'Report for Freelncer.docx';  // default name without extension
-     document.body.appendChild(link);
+    document.body.appendChild(link);
      if (navigator.msSaveOrOpenBlob ) navigator.msSaveOrOpenBlob( blob, 'Document.doc'); // IE10-11
          else link.click();  // other browsers
-     document.body.removeChild(link);
-   };
+    document.body.removeChild(link);
+  };
 </script>
