--- a/app/views/form2/new.html.erb
+++ b/app/views/form2/new.html.erb
@@ -1,34 +1,19 @@
 <% provide(:title, 'Form') %>
-<h1 style="font-family: cursive;">Input informations</h1>
-
+<h1 style="font-family: cursive;">Điền Thông Tin Làm cho Công Ty</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@form2) do |f| %>
-      <%= f.label :company_name %>
-      <%= f.text_field :company_name %>
-
-      <%= f.label :tax_code %>
-      <%= f.text_field :tax_code %>
-
-      <%= f.label :address %>
-      <%= f.text_field :address %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :position %>
-      <%= f.text_field :position %>
-
-      <%= f.label :date %>
-      <%= f.date_field :date %>
-
-      <%= f.label "Work description" %>
-      <%= f.text_field :work_des %>
-
-      <%= f.label :income %>
-      <%= f.number_field :income %>
-
-      <%= f.submit "Submit", {:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
+      <%= f.label :date, "Ngày" %>
+      <%= f.date_field :date, class:"form-control", type:"datetime-local", value:Time.now%>
+      <%= f.label "Mô tả công việc" %>
+      <%= f.text_field :work_des, class:"form-control form-control-lg", placeholder:"nhập vào công việc hàng ngày"%>
+      <%= f.label :income, "Thu nhập" %>
+      <%= f.number_field :income, class:"form-control form-control-lg", placeholder:"nhập vào số tiền của công việc cần điền"%>
+      <span class="image">
+        <%= f.label :image, "Hình ảnh xác nhận" %>
+        <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+      </span>
+      <%= f.submit "Xác nhận", {:style=>'font-family: cursive;', :class => "css_class", class: "btn btn-warning"} %>
     <% end %>
   </div>
 </div>
