--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,33 @@
 <% provide(:title, "Edit user") %>
 <div class="edit-container">
-<h1>Cập nhật thông tin cá nhân</h1>
-<div class="home-edit">
+  <h1>Cập nhật thông tin cá nhân</h1>
+  <div class="home-edit">
     <%= link_to image_tag("vector.png",class: "img-responsive") %>
-</div>
-<div class="home-edit-profile">
+  </div>
+  <div class="home-edit-profile">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <%= form_with(model: @user, local: true) do |f| %>
-                <%= render 'shared/error_messages' %>
-                <%= f.label :name, "Tên" %>
-                <%= f.text_field :name, class: 'form-control' %>
-                <%= f.label :email %>
-                <%= f.email_field :email, class: 'form-control', :disabled => true %>
-                <%= f.label :password, "Mật khẩu" %>
-                <%= f.password_field :password, class: 'form-control' %>
-                <%= f.label :password_confirmation, "Xác nhận mật khẩu" %>
-                <%= f.password_field :password_confirmation, class: 'form-control' %>
-                <%= f.submit "Cập nhật", class: "btn btn-primary" %>
-            <% end %>
-        </div>
+      <div class="col-md-6 col-md-offset-3">
+        <%= form_with(model: @user, local: true) do |f| %>
+          <%= render 'shared/error_messages' %>
+          <%= f.label :name, "Tên" %>
+          <%= f.text_field :name, class: 'form-control' %>
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control', :disabled => true %>
+          <%= f.label :password, "Mật khẩu" %>
+          <%= f.password_field :password, class: 'form-control' %>
+          <%= f.label :password_confirmation, "Xác nhận mật khẩu" %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+          <span class="content">
+            <%= f.label :image, "Avatar mới" %>
+            <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+          </span>
+          <%= f.label :time_work, "Thời gian làm việc"%>
+          <%= f.password_field :time_work, class: 'form-control', placeholder:'Nhập khoảng thời gian bạn làm công việc này'%>
+          <%= f.label :job, "Công việc hiện tại" %>
+          <%= f.password_field :job, class: 'form-control', placeholder:'Nhập vào công việc hiện tại của bạn'%>
+          <%= f.submit "Cập nhật", class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
-</div>
+  </div>
 </div>
