--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,28 +3,31 @@
   <%= link_to image_tag("home1.png",class: "img-responsive") %>
 </div>
 <div class="container-signup">
-<div class="row justify-content-center">
-  <div class="container-row-signup">
-  <div class="col-md-10 col-md-offset-2">
-    <h1 style="font-family: monospace;">Đăng kí</h1>
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label "Tên" %>
-      <%= f.text_field :name, class: 'form-control', placeholder:'Nhập tên của bạn' %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control', placeholder:'Nhập email của bạn' %>
-
-      <%= f.label "Mật khẩu"%>
-      <%= f.password_field :password, class: 'form-control', placeholder:'Nhập mật khẩu của bạn' %>
-
-      <%= f.label "Xác nhận mật khẩu" %>
-      <%= f.password_field :password_confirmation, class: 'form-control', placeholder:'Nhập lại mật khẩu phía trên' %>
-
-      <%= f.submit "Tạo tài khoản", {:style=>'font-family:arial', :class => "css_class",class: "btn btn-warning"} %>
-    <% end %>
+  <div class="row justify-content-center">
+    <div class="container-row-signup">
+      <div class="col-md-10 col-md-offset-2">
+        <h1 style="font-family: monospace;">Đăng kí</h1>
+        <%= form_for(@user) do |f| %>
+          <%= render 'shared/error_messages' %>
+          <%= f.label "Tên" %>
+          <%= f.text_field :name, class: 'form-control', placeholder:'Nhập tên của bạn' %>
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control', placeholder:'Nhập email của bạn' %>
+          <%= f.label "Mật khẩu"%>
+          <%= f.password_field :password, class: 'form-control', placeholder:'Nhập mật khẩu của bạn' %>
+          <%= f.label "Xác nhận mật khẩu" %>
+          <%= f.password_field :password_confirmation, class: 'form-control', placeholder:'Nhập lại mật khẩu của bạn' %>
+          <span class="image">
+            <%= f.label :image, "Avatar" %>
+            <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
+          </span>
+          <%= f.label :time_work, "Thời gian xuất báo cáo"%>
+          <%= f.text_field :time_work, class: 'form-control', placeholder:'Nhập khoảng thời gian bạn muốn xuất báo cáo'%>
+          <%= f.label :job, "Công việc tự do hiện tại" %>
+          <%= f.text_field :job, class: 'form-control', placeholder:'Nhập vào công việc tự do của bạn hiện tại'%>
+          <%= f.submit "Tạo tài khoản", {:style=>'font-family:arial', :class => "css_class",class: "btn btn-warning"} %>
+        <% end %>
+      </div>
+    </div>
   </div>
-  </div>
-</div>
 </div>
