--- a/app/views/users/report.html.erb
+++ b/app/views/users/report.html.erb
@@ -26,7 +26,7 @@
                   <td><%= form1.job %></td>
                   <td><%= form1.date %></td>
                   <td><%= form1.customer %></td>
-                  <td><%= form1.income %></td>
+                  <td><%= number_to_currency(form1.income, :unit => "$", :separator => ".", :delimiter => ",") %></td>
                   <td><%= form1.work_des%></td>
                   <%count+=1%>
                 </tr>
@@ -103,7 +103,7 @@
                   <td><%= form2.address %></td>
                   <td><%= form2.position %></td>
                   <td><%= form2.date %></td>
-                  <td><%= form2.income%></td>
+                  <td><%= number_to_currency(form2.income, :unit => "$", :separator => ".", :delimiter => ",")%></td>
                   <td><%= form2.work_des%></td>
                   <%count+=1%>
                 </tr>
