--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,95 +1,45 @@
-<div class="home1">
-  <%= link_to image_tag("vector1.png",class: "img-responsive") %>
+<div class="row">
+  <div class="col">
+    <%= link_to image_tag("vector1.png",class: "img-responsive") %>
+  </div>
+  <div class="col" id="container-home">
+    <h2>
+      Hãy bắt đầu trải nghiệm trang web bằng cách nhấn vào nút đăng kí phía dưới.
+    </h2>
+    <div class="d-flex justify-content-center">
+      <%= link_to "Đăng kí!", signup_path, {:style=>'', :class => "css_class",class: "btn btn-info"} %>
+    </div>
+  </div>
 </div>
-<div class="home2">
-  <%= link_to image_tag("standing20.png",class: "img-responsive") %>
-</div>
-<div class="home3">
-  <%= link_to image_tag("standing15.png",class: "img-responsive") %>
-</div>
-<div class="container-home">
-  <h2>
-    Hãy bắt đầu trải nghiệm trang web bằng cách nhấn vào nút đăng kí phía dưới.
-  </h2>
-   <%= link_to "Đăng kí!", signup_path, {:style=>'', :class => "css_class",class: "btn btn-info"} %>
-</div>
-<div class="container-home1">
-  <div class="container-home1-text1">
+<div class="container" id="container-home1">
+  <div class="row d-flex justify-content-center" id="container-home1-text1">
     <h2 style="color: #9999ff; font-weight: bold;">
-    Về chúng tôi
+      Về chúng tôi
     </h2>
   </div>
-  <h2 style="font-family: arial;">
-    Website cho phép bạn điền thông tin công việc đã làm nếu bạn là người làm việc tại nhà hoặc làm việc tại công ty.
-  </h2>
-  <h2 style="font-family: arial;">
-    Với website, bạn có thể
-  </h2>
-</div>
-<div class="container-home2">
-  <%= link_to image_tag("rectangle88.png",class: "img-responsive") %>
-</div>
-<div class="container-home3">
-  <%= link_to image_tag("rectangle89.png",class: "img-responsive") %>
-</div>
-<div class="container-home4">
-  <div class="container-home4-text1">
-    <h2 style="font-family: arial; font-weight: bold;">
-      Đăng nhập, đăng kí hoàn toàn miễn phí
+  <div class="row d-flex justify-content-center">
+    <h2 style="font-family: arial;">
+      Website cho phép bạn điền thông tin công việc đã làm nếu bạn là người làm việc tại nhà hoặc làm việc tại công ty.
     </h2>
   </div>
-  <div class="container-home4-text2">
-    <h2 style="font-family: arial; font-weight: bold;">
-      Quản lý việc làm, thu nhập một cách dễ dàng
-    </h2>
-  </div>
-  <div class="container-home4-text3">
-    <h2 style="font-family: arial; font-weight: bold;">
-      Xuất form, báo cáo kết quả nhanh chóng
-    </h2>
-  </div>
-  <div class="container-home4-text4">
-    <h2 style="font-family: arial; font-weight: bold;">
-      Quản lý thông tin cá nhân trên trang web, đổi mật khẩu....
+  <div class="row d-flex justify-content-center">
+    <h2 style="font-family: arial;">
+      Với website, bạn có thể
     </h2>
   </div>
 </div>
-<div class="container-home5">
+<div class="row d-flex justify-content-center" id="container-home2">
+  <div class="col-6">
+    <%= link_to image_tag("rectangle89.png",class: "img-responsive") %>
+  </div>
+</div>
+<div class="row d-flex justify-content-center" id="container-home5">
   <h2 style="font-family: arial; font-weight: bold;">
     LIÊN HỆ VỚI CHÚNG TÔI
   </h2>
 </div>
-<div class="container-home6">
-  <%= link_to image_tag("rectangle22.png",class: "img-responsive") %>
-</div>
-<div class="container-home7">
+<div class="row d-flex justify-content-center">
   <%= link_to image_tag("rectangle23.png",class: "img-responsive") %>
-</div>
-<div class="container-home8">
-  <%= link_to image_tag("vector2.png",class: "img-responsive") %>
-</div>
-<div class="container-home9">
-  <%= link_to image_tag("vector3.png",class: "img-responsive") %>
-</div>
-<div class="container-home10">
-  <h2 style="font-family: arial;">
-      Hotline
-  </h2>
-</div>
-<div class="container-home11">
-  <h2 style="font-family: arial; ">
-      Địa chỉ email
-  </h2>
-</div>
-<div class="container-home12">
-  <h2 style="font-family: arial; font-weight: bold;">
-      0927746924
-  </h2>
-</div>
-<div class="container-home13">
-  <h2 style="font-family: arial; font-weight: bold;">
-      support-website@gmail.com
-  </h2>
 </div>
 <div class="container-home14">
   <%= link_to image_tag("rectangle91.png",class: "img-responsive") %>
@@ -113,4 +63,4 @@
 <div class="center">
 <%= link_to image_tag("online.jpg",class: "img-responsive", alt: "Rails logo", width: "100%", height: "550"),
 "https://onlinesaleswebsite.herokuapp.com/" %>
-<%# </div> %> 
+<%# </div> %>
