--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,9 +1,9 @@
-<h1>Sample App</h1>
+<h1>Nghị lực sống</h1>
 
 <p>Hi <%= @user.name %>,</p>
 
 <p>
-Welcome to the Sample App! Click on the link below to activate your account:
+Chào mừng bạn đến với website quản lý thu nhập. Nhấp vào liên kết bên dưới để kích hoạt tài khoản của bạn:
 </p>
 
 <%= link_to "Activate", edit_account_activation_url(@user.activation_token,
