--- a/app/views/users/report.html.erb
+++ b/app/views/users/report.html.erb
@@ -4,7 +4,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2 style="color: blue; font-weight:bold;">Freelancer</h2>
+          <h2 style="color: blue; font-weight:bold;">Người làm việc tự do</h2>
           <table id="table1" class="table table-striped table-bordered" style="width:100%">
             <thead>
               <tr>
@@ -79,7 +79,7 @@
           </script>
         </div>
         <div class="carousel-item">
-          <h2 style="color: blue; font-weight:bold;">Work for Company</h2>
+          <h2 style="color: blue; font-weight:bold;">Người làm việc cho Công ty</h2>
           <table id="table2" class="table table-striped table-bordered" style="width:100%">
             <thead>
               <tr>
