--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <body>
     <header class="navbar navbar-default navbar-expand-lg navbar-light navbar-fixed-top" style="background-color: #9999ff;">
       <div class="container-fluid no-gutters">
-        <div class="col-0.1 justify-content-center">
+        <div class="col-0.1 justify-content-center" id="logo1">
           <%= link_to image_tag("logo.png",class: "img-responsive", alt: "Rails logo", width: "30", height: "30") %>
         </div>
         <div class="col-1 col-sm ml-2">
