--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col">
+  <div class="col d-none d-sm-block" id="img-header">
     <%= link_to image_tag("vector1.png",class: "img-responsive") %>
   </div>
   <div class="col" id="container-home">
