--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,6 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-
  .container-fluid {
    padding-left: 0px;
    padding-right: 0px;
@@ -137,7 +136,7 @@ footer ul li {
     width: 550px;
 }
 .user_center {
-    height: 200px;
+    height: 250px;
 }
 /* forms */
 
@@ -287,7 +286,7 @@ aside {
 .col-md-6 {
   padding-left: 0px;
   padding-right: 0px;
-  margin-left: 100px;
+  margin-left: 0px;
 }
 .home-signup {
   height: 100%;
@@ -536,7 +535,7 @@ aside {
   z-index: 1;
   background-color: white;
   width: 450px;
-  height: 370px;
+  height: 400px;
   border-radius: 10px;
 }
 .user_center {
@@ -558,8 +557,11 @@ aside {
   width: 223px;
   height: 50px;
 }
+#carousel-report {
+  margin-left: 90px;
+}
 .carousel-inner {
-  width: 80%;
+  width: 90%;
   margin-top: 20px;
   margin-left: 30px;
 }
@@ -610,6 +612,10 @@ aside {
 .profile-container1 {
   float: left;
 }
+.dropdown-menu {
+  width: 200px;
+  height: 200px;
+}
 @media screen and (max-width: 1025px){
   .header-menu {
     margin-left: 200px;
@@ -645,17 +651,52 @@ aside {
     width: 300px;
     margin-right: 300px;
   }
-}
-@media screen and (max-width: 500px){
-  #logo {
-    width: 100px;
-    margin-right: 180px;
+  .col-sm {
+    width: 25%;
   }
+  .navbar-toggler {
+    float: right;
+    margin-top: 15px;
+    margin-right: 30px;
+  }
+  #navbarSupportedContent {
+    margin-top: 50px;
+  }
+  .container-home15 img {
+    width: 0;
+  }
+}
+@media screen and (max-width: 450px){
+  #logo1 {
+    position: absolute;
+    width: 40px;
+    margin-right: 0px;
+    left: 8%;
+  }
+  #logo {
+    margin-left: 0px;
+  }
+  .navbar-toggler {
+    float: right;
+    margin-top: 5px;
+    margin-right: 0px;
+  }
+  #navbarSupportedContent {
+    float: right;
+    margin-left: 50%;
+  }
+  .dropdown-menu {
+    width: 200px;
+    height: 200px;
+  }
+  #img-header img{
+    width: 0px;
+  }
+  #container-home h2 {
+    text-align: center;
+  }
+  
 }
 @media screen and (max-width: 400px){
-  #logo {
-    float: left;
-    width: 60px;
-    margin-right: 70x;
-  }
+
 }
